# youtube-video-lister

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AWS_BEDROCK_MODELS.md  BEDROCK_ON_DEMAND_MODELS.md  BEDROCK_OPENAI_MODELS.md  BEDROCK_SETUP.md  CHANGELOG.md  CLAUDE.md  CONFIG_GUIDE.md  DUAL_FRONTEND_GUIDE.md  GIT_SECURITY_COMPLETE.md  HARDENING_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALL_FFMPEG.md  LLM_CONFIG_PERSISTENCE.md  MANIFEST.in  MIGRATION_GUIDE.md  NODEJS_SETUP.md  OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_COMPLETE.md  STREAMING_STATUS.md  STREAMING_SUMMARY.md  SUMMARIZATION_GUIDE.md  SUMMARY_FEATURE.md  TEST_CONNECTIONS.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  VANILLA_JS_SYNC.md  WARNINGS_RESOLVED.md  WEB_UI_GUIDE.md  channels_config.example.json  channels_config_advanced.example.json  (+25 more)
.claude/agents/: backend-agent.md  ui-agent.md
backend/: .env.example  config.py  exceptions.py  llm_client.py  logging_config.py  main.py  prompts.py  run.sh  test_endpoint.py  transcript_metadata.py  validators.py
backend/chat/: __init__.py  models.py
backend/config/: channels_config.example.json  transcript_metadata.json
backend/rag/: __init__.py  bm25_store.py  chat_routes.py  chat_service.py  chat_service.py.bak  chunker.py  data_layer_test.py  embeddings.py  indexer.py  reranker.py  retriever.py  routes.py  test_indexer.py  vector_store.py
channel_data/: processing_summary.txt
examples/: example_workflow.py
frontend/: .env.example  README.md  package.json  run.sh
frontend/public/: index.html
frontend/src/: App.js  config.js  index.css  index.js
services/: summarizer.js
src/youtube_toolkit/: __init__.py  channel_lister.py  cli.py  converter.py  downloader.py  monitor.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: README.md  __init__.py  test_api.py  test_bedrock_streaming.py  test_channel_lister.py  test_chat_api.py  test_converter.py  test_streaming.py  test_web_api.py
tests/backend/: __init__.py  test_api.py  test_bedrock_streaming.py  test_chat_api.py  test_chat_service.py  test_downloader.py  test_rag_integration.py  test_streaming.py
transcripts/: I Replaced OpenClaw With Perplexity Computer….en.txt
(+208 files in other folders)
